mplot 0.8.2 [2017-11-26]
------------------------

* The bglmnet function has been been re-written
* Added boot_size plot option for bglmnet objects


mplot 0.8.1 [2017-11-18]
------------------------

* More sensible nbest parameter behaviour in the vis function. 
  Now nbest = "all" reverts back to nbest = 1 for models with 
  more than 15 parameters.  This can be overridden by specifying 
  an integer, rather than specifying "all".  For large model sizes, 
  if the number specified is too large, it will lead to memory 
  overruns and failures with dependent packages.
* Fixed vignette/pkgdown issue where there were multiple 
  vignettes created with the same name.


mplot 0.8.0 [2017-11-03]
------------------------

* Random seed parameter for reproducible results
* New website
* Small fixes for JSS article (e.g. googleVis axis padding)


mplot 0.7.8 [2016-08-17]
------------------------

* reimplemented classic plots in ggplot2
* classic plots are now default (reviewer feedback)
* improved documentation
    - more detail about procedures
    - more detail about plotting methods
* fixed the passing of weights for weighted models
* can now obtain full loss v dimension which="lvk"
  plots for glms
* vis() default is now nbest="all".
* experimental support for glmulti as a backend
  instead of bestglm for glms for the vis function.
  This enables users to enforce marginality constraints.

mplot 0.7.6 [2016-05-20]
------------------------

* maintenance, larger update coming soon


mplot 0.7.5 [2015-11-05]
------------------------

* added fev and wallabies dataset


mplot 0.7.4 [2015-10-10]
------------------------

* added tag option to googleVis plots to facilitate easier
  plotting in rmarkdown documents.
* citation updated to reference arXiv article
* bootstrapping glmnet (bglmnet) function refined and
  added to the mplot() shiny interface

mplot 0.7.1 [2015-09-09]
------------------------

* Fix for undefined globals (CRAN submission)

mplot 0.7.0 [2015-09-08]