@@ -155,7 +155,7 @@
   <span class='kw'>axisTitlesPosition</span> <span class='kw'>=</span> <span class='st'>"out"</span>, <span class='kw'>dataOpacity</span> <span class='kw'>=</span> <span class='fl'>0.5</span>, <span class='kw'>options</span> <span class='kw'>=</span> <span class='kw'>NULL</span>, <span class='no'>ylim</span>,
   <span class='kw'>legend.position</span> <span class='kw'>=</span> <span class='st'>"right"</span>, <span class='kw'>backgroundColor</span> <span class='kw'>=</span> <span class='st'>"transparent"</span>,
   <span class='kw'>text</span> <span class='kw'>=</span> <span class='fl'>FALSE</span>, <span class='kw'>min.prob</span> <span class='kw'>=</span> <span class='fl'>0.4</span>, <span class='kw'>srt</span> <span class='kw'>=</span> <span class='fl'>45</span>, <span class='kw'>max.circle</span> <span class='kw'>=</span> <span class='fl'>15</span>,
-  <span class='kw'>print.full.model</span> <span class='kw'>=</span> <span class='fl'>FALSE</span>, <span class='kw'>jitterk</span> <span class='kw'>=</span> <span class='fl'>0.1</span>, <span class='no'>...</span>)</pre>
+  <span class='kw'>print.full.model</span> <span class='kw'>=</span> <span class='fl'>FALSE</span>, <span class='kw'>jitterk</span> <span class='kw'>=</span> <span class='fl'>0.1</span>, <span class='kw'>seed</span> <span class='kw'>=</span> <span class='kw'>NULL</span>, <span class='no'>...</span>)</pre>
     
     <h2 class="hasAnchor" id="arguments"><a class="anchor" href="#arguments"></a> Arguments</h2>
     <table class="ref-arguments">
@@ -311,6 +311,10 @@ model gets a label or not.  Default=<code>FALSE</code>.</p></td>
       <th>jitterk</th>
       <td><p>amount of jittering of the model size in the lvk and boot plots.
 Default = 0.1.</p></td>
+    </tr>
+    <tr>
+      <th>seed</th>
+      <td><p>random seed for reproducible results</p></td>
     </tr>
     <tr>
       <th>...</th>
